--- a/energy.pug
+++ b/energy.pug
@@ -2,14 +2,8 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
-button(type="button", class="btn btn-secondary")Left
-<button onclick="moreClaps()">Click me</button>
-<div id = target>Clap for me</div>
-<script> 
-var clap_count = 0
-moreClaps() {
-  clap_count = clap_count + 2 
-  div.textcontent = "Clap" clap_count "times"
-}
-</script>
+String[] results (joules_produced, joules_needed, location)
+<div class=container-fluid>joules_produced</div>
+<div class=row>joules_needed</div>
+
+<div class=col-sm-2>location</div>
